Fixed flex display problem on mobile screens

--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body {
   flex-direction: column;
   flex-wrap: nowrap;
   margin-bottom: 1em;
+  flex-grow: 1;
+  flex-basis: max-content;
+  flex-shrink: 1;
 }
 
 .card {
@@ -71,10 +74,15 @@ body {
   background-color: var(--dark-blue);
   color: white;
   z-index: 0;
-  flex-basis: 73%;
   height: 8em;
   margin-bottom: -1em;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 375px) {
+  .card {
+    flex-basis: min-content;
+  }
 }
 
 .card:hover {
@@ -131,8 +139,8 @@ body {
   margin-bottom: -1em;
   flex-grow: 1;
   border-radius: 1em 1em 0 0;
-  flex-basis: 27%;
   flex-shrink: 0;
+  height: 3em;
 }
 
 .ellipsis:hover {
